log/build_2023-11-23_14-56-39/turtle_custom_controller/stderr.log
  File "/home/beaver/ros2_ex_turtlesim/install/turtle_custom_controller/lib/python3.10/site-packages/turtle_custom_controller/turtle_controller.py", line 17
    if keyboard.is_pressed('w')
                               ^
SyntaxError: expected ':'

